updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring software engineer that is pivoting from the hospitality industry.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p> I was born and raised ouside of Philadelphia, then moved to Raleigh after graduating from East Carolina University. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, backpacking, hanging with my dog, movies, television, beer, watching Philadelphia Sports </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is one that I enjoy while having a great work/life balance.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live 5 minutes outside of downtown Raleigh. </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would like to be a web developer because I enjoy problem solving, working within teams, and seeing technical projects through from start to finish. </p>
     </section>
 
     <footer id="footer">
